--- a/E-ticaret(İleri_Seviye)/E-ticaret(İleri_Seviye).csproj
+++ b/E-ticaret(İleri_Seviye)/E-ticaret(İleri_Seviye).csproj
@@ -359,6 +359,7 @@
     <Compile Include="Models\Instructor.cs" />
     <Compile Include="Models\Login.cs" />
     <Compile Include="Models\Order.cs" />
+    <Compile Include="Models\OrderModel.cs" />
     <Compile Include="Models\Register.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -386,6 +387,7 @@
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\ShoppingCart\Index.cshtml" />
     <Content Include="Views\ShoppingCart\Checkout.cshtml" />
+    <Content Include="Views\Account\MyProfile.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
